# agentic

./: .gitignore  AGENTS.md  LICENSE  README.md  test.html
ai_server/: .dockerignore  .gitignore  pyproject.toml
ai_server/docker/: Dockerfile.service
ai_server/src/: run_service.py
ai_server/src/agents/: __init__.py  tools.py
ai_server/src/core/: config.py  rate_limit.py
ai_server/src/memory/: postgres.py
ai_server/src/schema/: models.py
ai_server/src/service/: service.py
ai_server_web_next/: .gitignore  package.json  pnpm-lock.yaml
ai_server_web_next/.next/: _events_69249.json  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json
ai_server_web_next/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
ai_server_web_next/.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
ai_server_web_next/.next/dev/cache/: .rscinfo
ai_server_web_next/.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
ai_server_web_next/.next/dev/server/app/: page.js  page_client-reference-manifest.js
ai_server_web_next/.next/dev/server/pages/: _app.js  _document.js  _error.js
ai_server_web_next/.next/dev/static/chunks/: 06_a_next_10o8o2~._.js  06_a_next_10o8o2~._.js.map  06_a_next_app_0hsouv4.js  06_a_next_app_0hsouv4.js.map  06_a_next_dist_0.x--xs._.js  06_a_next_dist_0.x--xs._.js.map  06_a_next_dist_0c68lu.._.js  06_a_next_dist_0c68lu.._.js.map  06_a_next_dist_0k1~_1_._.js  06_a_next_dist_0k1~_1_._.js.map  06_a_next_dist_0k80_n8._.js  06_a_next_dist_0k80_n8._.js.map  06_a_next_dist_0lr8r4-._.js  06_a_next_dist_0lr8r4-._.js.map  (+193 more)
ai_server_web_next/.next/dev/types/: validator.ts
ai_server_web_next/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
ai_server_web_next/.next/server/app/: page.js  page.js.nft.json  page_client-reference-manifest.js
ai_server_web_next/.next/server/chunks/: [root-of-the-server]__0x1f5fk._.js  [root-of-the-server]__0x1f5fk._.js.map
ai_server_web_next/.next/static/chunks/: 0-cj2~ucjn~-6.css  0-mbu_g34mb2r.js  028t08b1dhl58.js  02lq8sh8gznt~.js  04lblmeq9r2jf.js  05cuvwl8pisjw.js  08vh6kwj8mw2s.js  0dboywsaosrwv.js  0f9cfvx-scg9_.js  0k_uadzh2u2s5.js  0p.5yutksq2e4.js  0y.aset75mwgf.js  11js82n9r446..js  turbopack-15gq0nwt63y7g.js
ai_server_web_next/.next/types/: validator.ts
ai_server_web_next/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
ai_server_web_next/components/: chat-input.tsx  chat-response.test.tsx  chat-response.tsx  discover-section.test.tsx  discover-section.tsx  focus-selector.test.tsx  focus-selector.tsx  navbar.test.tsx  navbar.tsx
ai_server_web_next/components/auth/: auth-modal.tsx  login-form.tsx  register-form.tsx
ai_server_web_next/components/chat/: chat-input.tsx  global-chat-shell.tsx
ai_server_web_next/components/layout/: header.tsx
ai_server_web_next/components/ui/: Sidebar.tsx
ai_server_web_next/lib/: api.ts
api/: .env.example  compose.yaml  config.yaml  pyproject.toml  refresh.sh
api/src/agents/: agents.py  rag_assistant.py  safeguard.py  tools.py
api/src/core/: __init__.py  config.py  llm.py
api/src/schema/: __init__.py  schema.py
api/src/service/: service.py
api/src/tasks/: __init__.py  agent_tasks.py
next-app/: pnpm-lock.yaml
web/: pnpm-lock.yaml
(+486 files in other folders)
